# cpp-templates-2023-11-06

./: CMakeLists.txt  README.md
_exercises/ex-class-templates/: ex_class_templates.cpp
_exercises/ex-concepts/: concepts_and_constraints.cpp
_exercises/ex-template-functions/: template_functions.cpp
_exercises/ex-variadic-templates/: variadic_templates.cpp
class-templates/: class_templates.cpp
concepts/: concepts.cpp
function-templates/: function_templates.cpp
policy-based-design/: main.cpp
policy-based-design/src/: vector.hpp
policy-based-design/tests/: CMakeLists.txt
sfinae/: sfinae.cpp
traits-and-policies/: traits_and_policies.cpp
type-deduction/: type_deduction.cpp
type-traits/: type_traits.cpp
variadic-templates/: vt.cpp
